--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,10 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 @import "~normalize.css";
 
 @import "header";
 @import "toolbar";
 @import "formula";
 @import "table";
+@import "dashboard";
 
 * {
   margin: 0;
@@ -19,4 +20,9 @@ body {
 
 .excel {
   position: relative;
+  color: #888;
+  height: 100%;
+  width: 100%;
+  max-width: 100%;
+  font-size: .8rem;
 }
